--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,36 +1,63 @@
-    
-<div class="header">
+<!-- start home -->
+<div id="home" class="section">
   <div class="container">
-    <h1>Fleming Onasis Halim</h1>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
+        <h3>Bachelor of Information Systems</h3>
+        <h1>Fleming Onasis Halim</h1>
+        <h2 class="rotate">WEB DEVELOPER &AMP; DATA ANALYST &AMP; LARAVEL &AMP; MYSQL DATABASE &AMP;</h2>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+        <a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
   </div>
 </div>
-<div class="nav">
+<!-- end home -->
+<!-- start work -->
+<div id="work" class="section">
   <div class="container">
-    <ul>
-      <li>Register</li>
-      <li>Schedule</li>
-      <li>Sponsors</li>
-      <li>About</li>
-      <li>Contact</li>
-    </ul>
+    <div class="row">
+      <div class="col-md-12 wow bounce">
+        <h2>WHAT I DO</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
+        <div class="media">
+          <div class="media-object media-left">
+            <i class="fa fa-laptop"></i>
+          </div>
+          <div class="media-body">
+            <h3 class="media-heading">Responsive Mobile</h3>
+            <p>Lavish CSS Template is designed by templatemo. Download, edit and use this layout.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
+        <div class="media">
+          <div class="media-object media-left">
+            <i class="fa fa-link"></i>
+          </div>
+          <div class="media-body">
+            <h3 class="media-heading">CSS Templates</h3>
+            <p>We provide a wide range of HTML5 templates for free. Please spread a word about us on social media.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
+        <div class="media">
+          <div class="media-object media-left">
+            <i class="fa fa-paper-plane"></i>
+          </div>
+          <div class="media-body">
+            <h3 class="media-heading">UI &AMP; UX Design</h3>
+            <p>Credits go to <a rel="nofollow" href="https://pixabay.com">Pixabay</a> and <a rel="nofollow" href="http://unsplash.com">Unsplash</a> for images used in this free CSS website template.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-<div class="main">
-  <div class="container">
-    <img src="https://content.codecademy.com/projects/innovation-cloud/cloud.svg" height="128" width="196">
-    <h2>The Innovation Cloud Conference</h2>
-    <p>Connect with the best minds across a wide range of industries to share ideas and brainstorm new solutions to challenging problems.</p>
-    <p>Hear industry leaders talk about what worked (and what didn't) so that you can save time on your most challenging projects.</p>
-    <p>Learn about the latest research and technologies that you can use immediately to invent the future.</p>
-    <a class="btn" href="#">View My Work</a>
-  </div>
-</div>
-<div class="footer">
-  <div class="container">
-    <p>&copy; Fleming Onasis Halim <br>
-      <a href="https://flemingonasis.github.io/"> <img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111292.svg" width="20" height="20">My Github </a> <br>
-      <a href="https://www.linkedin.com/in/fleming-onasis-h-14ab63103"><img src="https://www.flaticon.com/svg/static/icons/svg/174/174857.svg" width="20" height="20"> My LinkedIn </a> <br>
-      <a href="https://twitter.com/flemingonasis"><img src="https://www.flaticon.com/svg/static/icons/svg/733/733579.svg" width="20" height="20"> My Twitter </a>
-    </p>
-  </div>
-</div>
+<!-- end work -->
