--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <title>Lavish - Free Responsive Template</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="author" content="templatemo">
+    <!-- 
+        Lavish HTML CSS Template
+        https://templatemo.com/tm-458-lavish
+        -->
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- google font -->
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,800' rel='stylesheet' type='text/css'>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <%= yield %>
+    <div id="fullpage">
+      <div class="nav">
+        <div class="container">
+          <ul>
+            <li><%= link_to "Welcome", "/" %></li>
+            <li><%= link_to "Portfolio", "/pages/portfolio" %></li>
+            <li>Sponsors</li>
+            <li>About</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+      </div>
+      <%= yield %>
+      <!-- start footer -->
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
+              <p>Copyright &copy; 2018 Lavish Personal Profile 
+                . Designed by <a rel="nofollow noopener" href="https://templatemo.com">templatemo</a></p>
+              <hr>
+              <ul class="social-icon">
+                <li><a href="https://flemingonasis.github.io/" class="fa fa-github"></a></li>
+                <li><a href="https://www.linkedin.com/in/fleming-onasis-h-14ab63103" class="fa fa-linkedin"></a></li>
+                <li><a href="https://twitter.com/flemingonasis" class="fa fa-twitter"></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- end footer -->
+    </div>
+    <!-- jQuery -->
+    <!-- <script src="js/jquery.js"></script> -->
+    <!-- bootstrap -->
+    <!-- <script src="js/bootstrap.min.js"></script> -->
+    <!-- fullpage -->
+    <!-- <script src="js/jquery.fullPage.js"></script> -->
+    <!-- smoothScroll -->
+    <!-- <script src="js/smoothscroll.js"></script> -->
+    <!-- wow -->
+    <!-- <script src="js/wow.min.js"></script> -->
+    <!-- text rotater -->
+    <!-- <script src="js/jquery.simple-text-rotator.js"></script> -->
+    <!-- custom -->
+    <!-- <script src="js/custom.js"></script> -->
   </body>
 </html>
