--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,10 +26,10 @@
         <div class="container">
           <ul>
             <li><%= link_to "Welcome", "/" %></li>
-            <li><%= link_to "Portfolio", "/pages/portfolio" %></li>
-            <li>Sponsors</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li><%= link_to "Portfolio", "/portfolio" %></li>
+            <li><%= link_to "Medium", "https://medium.com/@flemingonasis" %></li>
+            <li><%= link_to "About", "/about" %></li>
+            <li><%= link_to "Contact", "/contact" %></li>
           </ul>
         </div>
       </div>
