--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -6,7 +6,7 @@
       <div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
         <h3>Bachelor of Information Systems</h3>
         <h1>Fleming Onasis Halim</h1>
-        <h2 class="rotate">WEB DEVELOPER &AMP; DATA ANALYST &AMP; LARAVEL &AMP; MYSQL DATABASE &AMP;</h2>
+        <h2 class="rotate">WEB DEVELOPER, DATA ANALYST, LARAVEL, MYSQL DATABASE</h2>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
         <a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
       </div>
